--- a/control
+++ b/control
@@ -1,15 +1,58 @@
 Source: zen-browser
-Section: contrib/web
+Section: web
 Priority: optional
-Maintainer: Ibrahimm Admin <admin@ibrahimm.online>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.5.0
-Homepage: https://zen-browser.app/
+Maintainer: theycallmeibra <ibrahimmammedov7@gmail.com>
+Build-Depends: debhelper-compat (= 12),
+               libx11-dev,
+               libx11-xcb-dev,
+               libxt-dev,
+               libgtk-3-dev,
+               libglib2.0-dev,
+               libdrm-dev,
+               libstartup-notification0-dev,
+               libjpeg-dev,
+               zlib1g-dev,
+               libreadline-dev,
+               python3 (>= 3.8),
+               libnspr4-dev (>= 2:4.32~),
+               libnss3-dev (>= 2:3.118~),
+               libvpx-dev (>= 1.10.0),
+               libdbus-1-dev,
+               libffi-dev,
+               libevent-dev,
+               libpulse-dev,
+               libasound2-dev,
+               nasm (>= 2.14),
+               rustc (>= 1.82),
+               cargo (>= 1.82),
+               llvm-dev,
+               libclang-dev,
+               clang,
+               libc++-dev-wasm32,
+               libclang-rt-dev-wasm32,
+               lld,
+               cbindgen (>= 0.29.1),
+               nodejs (>= 12.22.1),
+               npm,
+               zip,
+               unzip,
+               locales,
+               xvfb,
+               xauth
+Standards-Version: 3.9.8.0
+Vcs-Git: https://github.com/theycallmeibra/zen-browser-debian.git
+Vcs-Browser: https://github.com/theycallmeibra/zen-browser-debian
 
 Package: zen-browser
-Architecture: amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgtk-3-0, libdbus-glib-1-2, libxt6
-Description: Zen Browser - Experience Tranquility
- Zen Browser is a fork of Firefox focused on privacy and usability.
- .
- This package installs the official binary release.
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         fontconfig,
+         procps,
+         debianutils (>= 1.16),
+         libnspr4 (>= 2:4.32~),
+         libnss3 (>= 2:3.118~)
+Provides: www-browser
+Description: Zen Browser - Experience world-class browsing
+ Zen is a powerful, extensible web browser based on Firefox.
+ This package is compiled from source to ensure security.
